# ALTO

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker_rocm_shell.sh  docker_run_mxfp8.sh  fp4_low_precision_technical_report_zh.md  guanchen_run.sh  log.txt  nvfp4_asm_pass_analysis_zh.md  nvfp4_design_doc_zh.md  nvfp4_fp4_codec_and_scale_analysis_zh.md  nvfp4_stochastic_rounding_zh.md  pyproject.toml  repro_mxfp8_dot_scaled.md  repro_mxfp8_dot_scaled.py  requirements.txt  run.sh  run_tests.sh  setup_rocm_env.sh  start_docker.sh
.github/: CODEOWNERS
alto/: __init__.py  _adahop_bridge.py  train.py
docs/: calibration_examples.md  dataset_preprocessing.md  lp_e2e_verification_protocol.md  mxfp8_real_data_op_level_snr_report_zh.md  nvfp4_10k_head2head_report.md  nvfp4_10k_single_recipe_report.md  nvfp4_e2e_training_technical_report_cn.md  nvfp4_final_20k_report.md  nvfp4_grouped_gemm_branch_review.md  nvfp4_grouped_gemm_e2e_final_report_cn.md  nvfp4_grouped_gemm_e2e_plan_cn.md  nvfp4_grouped_gemm_e2e_summary_cn.md  nvfp4_grouped_gemm_feature_report.md  nvfp4_grouped_gemm_followup_tasks.md  nvfp4_grouped_gemm_native_design.md  nvfp4_linear_pr_description.md  nvfp4_linear_technical_report_cn.md  nvfp4_linear_update_notes.md  nvfp4_paper_guided_5k_report.md  nvfp4_phase1_tail_sweep_5k.md  nvfp4_phase2_paper_sweep_5k.md  nvfp4_recipe_and_nvfp_linear_summary_cn.md  nvfp4_recipe_validation_report.md  nvfp4_tail_w2d_20k_comparison.md  nvfp4_training_optimization_proposals.md  testing_quickstart.md
examples/: ADMM_Llama_3.1_8B.sh  ALPS_Llama_3.1_8B.sh  AWQ_Llama_3.1_8B.sh  AdmmStructured_Llama_3.1_8B.sh  CosineSimilarity_Llama_3.1_8B.sh  GPTQ_Llama_3.1_8B.sh  Magnitude_Llama_3.1_8B.sh  OBS_Llama_3.1_8B.sh  RTN_Llama_3.1_8B.sh  SparseGPT_Llama_3.1_8B.sh  WandaStructured_Llama_3.1_8B.sh  Wanda_Llama_3.1_8B.sh  calib_dataset_examples.md  llama3.2_1b_mx9.sh  prune_example.sh  run.sh
modeloptimizer/: __init__.py  train.py
reports/: llama3_debug_outer_block_summary.md
scripts/: build_docker.sh  check_training_status.sh  collect_sweep_results.py  compute_step_to_val_loss.py  convert_to_hf.py  debug_observer_viz.py  diagnose_route_b.py  dump_real_test_activations.py  dump_real_test_activations.sh  entrypoint.sh  entrypoint_nvfp4_gpt_oss_20b.sh  entrypoint_nvfp4_gpt_oss_20b_test2_16k.sh  eval_wikitext.sh  export.sh  hf_uncompressed_lmeval.sh  hf_uncompressed_ppleval.sh  launch_nvfp4_test2_16k.sh  monitor_e2e_progress.py  mxfp8_real_data_snr.py  nvfp4_node_health_sidecar.sh  nvfp4_recipe_e2e_probe.py  p2p_diag.py  p2p_zeros_analysis.py  plot_longhorizon_3way_e2e1000_loss_curves.py  plot_nvfp4_2dx_vs_test2_vs_bf16_e2e100.py  plot_nvfp4_test2_16k_val_curve.py  plot_paper_aligned_e2e100_loss_curves.py  plot_specfix_3way_e2e100_loss_curves.py  plot_specfix_e2e100_loss_curves.py  plot_sweep5_gbs64_val.py  plot_validator_4way_e2e100_3way_style.py  plot_validator_4way_e2e100_curves.py  repro_mxfp8_dot_scaled_frozen_inputs.py  repro_mxfp8_dot_scaled_vs_emulated.py  run_nvfp4_recipe_sweep.py  serve_speed_benchmark.py  serve_speed_benchmark.sh  sweep_nvfp4_recipes.sh  train_dispatch_nvfp4.py  train_route_a.py  (+5 more)
src/: __main__.py
(+517 files in other folders)
