[tool.poetry]
name = "alto"
description = "Advanced Lightweight Training and Optimization"
version = "0.0.0"
homepage = "https://github.com/AMD-AGI/ALTO"
authors = [
    "Guanchen Li <GuanChen.Li@amd.com>",
    "Zhitao Wang <Zhitao.Wang@amd.com>",
    "Yue Sun <Yue.Sun2@amd.com>",
    "Han Wang <Han.Wang@amd.com>",
    "Yixing Xu <Yixing.Xu@amd.com>",
    "Xuanwu Yin <Xuanwu.Yin@amd.com>",
    "Dong Li <d.li@amd.com>",
]
license = "MIT"
readme = "README.md"
packages = [{ include = "alto" }]
include = [
    { path = "README.md", format = [
        "sdist",
        "wheel",
    ] },
    { path = "version.txt", format = [
        "sdist",
        "wheel",
    ] },
]

[tool.poetry.group.dev.dependencies]
pre-commit = ">=4.0.0"

[tool.poetry.dependencies]
python = ">=3.9.0"
torch = ">=2.9.0"
torchao = "*"
safetensors = "*"
compressed_tensors = "*"
pydantic = "*"
yapf = "*"
lm_eval = "*"
easydict = "*"
loguru = "*"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true
[tool.poetry-dynamic-versioning.from-file]
source = "version.txt"

[tool.pytest.ini_options]
# Real-data op-level SNR tests require pre-captured GPT-OSS-20B activation
# bundles on a shared filesystem (default ``/wekafs/zhitwang/test_data/
# real_activations/``).  Bundles are produced once by
# ``scripts/dump_real_test_activations.py`` and consumed by
# ``tests/unittest/{nvfp4,mxfp4}/test_*_real.py``.
#
# The tests stay opt-in: default ``pytest`` runs (and CI) exclude the marker,
# so missing weka does not turn into red builds.  Run with ``pytest -m
# real_data ...`` (or override via -o addopts="") to include them.
markers = [
    "real_data: op-level SNR test that needs pre-captured real-model activation bundles on /wekafs (opt-in via `pytest -m real_data`)",
]
addopts = "-m 'not real_data'"
